--- a/index.html
+++ b/index.html
@@ -14,15 +14,44 @@
     <title>Promises, async & await</title>
   </head>
   <body>
-    <h1>Digite um CEP e veja os casos de COVID-19 na região</h1>
+    <h1>Digite um CEP e veja a situação da COVID-19 na região</h1>
     <div class="container">
-      <input type="text" id="box" placeholder="0000-000" class="search__box" />
+      <input
+        type="number"
+        id="box"
+        placeholder="0000000"
+        class="search__box"
+        maxlength="9"
+      />
       <i
         class="fas fa-search search__icon"
         id="icon"
         onclick="toggleShow()"
       ></i>
     </div>
+    <div class="invalid-message-container">
+      <p id="invalidCep"></p>
+    </div>
+
+    <table class="covidResults">
+      <tr>
+        <td>Estado pesquisado</td>
+        <td class="table-info" id="locale"></td>
+      </tr>
+      <tr>
+        <td>Casos confirmados</td>
+        <td class="table-info" id="confirmedCases"></td>
+      </tr>
+      <tr>
+        <td>Casos suspeitos</td>
+        <td class="table-info" id="suspectedCases"></td>
+      </tr>
+      <tr>
+        <td>Total de mortes</td>
+        <td class="table-info" id="totalDeaths"></td>
+      </tr>
+    </table>
+
     <script src="./js/main.js"></script>
   </body>
 </html>
