fix: add aria label at input

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         maxlength="9"
         class="search__box"
         pattern="[0-9]"
+        aria-label="cep number"
       />
       <i
         class="fas fa-search search__icon"
